--- a/less/home-page.less
+++ b/less/home-page.less
@@ -41,24 +41,28 @@
       animation-name: slideUp;
       animation-duration: 1s;
       animation-timing-function: ease-out;
-      
+
       @media @phone {
         .img-mobile;
-        .sky {
-            .hide;
-          }
-      
-        .launch {
-            .hide;
-          }
       }
+      
     }
     .sky {
       animation-delay: 0.1s;
     }
-
+    
     .launch {
       animation-delay: 0.2s;
+    }
+    
+    @media @phone {
+      .sky {
+          .hide;
+        }
+    
+      .launch {
+          .hide;
+        }
     }
   }
 
